# NYC-Taxi-Data-Analysis

./: LICENSE  Makefile  README.md  pyproject.toml
html/: 25218722_BDE_AT2_PART_1.html  25218722_BDE_AT2_PART_2.html  25218722_BDE_AT2_PART_3_Notebook_1.html  25218722_BDE_AT2_PART_3_Notebook_2.html  25218722_BDE_AT2_PART_3_Notebook_3.html  25218722_BDE_AT2_PART_3_Notebook_4.html
notebooks/: 25218722_BDE_AT2_PART_1.ipynb  25218722_BDE_AT2_PART_2.ipynb  25218722_BDE_AT2_PART_3_Notebook_1.ipynb  25218722_BDE_AT2_PART_3_Notebook_2.ipynb  25218722_BDE_AT2_PART_3_Notebook_3.ipynb  25218722_BDE_AT2_PART_3_Notebook_4.ipynb
nyc_taxi_data_analysis/: __init__.py  dataset.py  features.py  plots.py
nyc_taxi_data_analysis/modeling/: predict.py  train.py
