[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "nyc_taxi_data_analysis"
version = "0.0.1"
description = "This project focuses on analyzing the New York City Taxi and Limousine Commission (TLC)"
authors = [
  { name = "Shashikanth Senthil Kumar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=dataset using Databricks Spark. The dataset contains nearly a billion of yellow and green taxi.0"


[tool.ruff]
line-length = 99
src = ["nyc_taxi_data_analysis"]
include = ["pyproject.toml", "nyc_taxi_data_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nyc_taxi_data_analysis"]
force-sort-within-sections = true

